Update content and styling

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/main.css">
+  <script src='scripts/app.js'></script>
   <title>J. Adam Lovatt</title>
 </head>
 <body><header>
-adam(1)                           User's Manual                          adam(1)
+adam(1)                          User's Manual             <em><a id="toggle" class="anchor-no-decoration" href="#">[TOGGLE COLOR SCHEME]</a></em>
 
 <em>NAME</em>
     J. Adam Lovatt - A junior web developer with experience in UI design and
-                     project management. Proficient in Javascript, HTML, CSS,
-                     and Lua
+                     project management. Proficient in JavaScript, HTML5, CSS3,
+                     and Lua.
 
 <em>SYNOPSIS</em>
     <em>adam</em>  <em><a class="anchor-no-decoration" href="#--developer">[--developer]</a></em> <em><a class="anchor-no-decoration" href="#--designer">[--designer]</a></em> <em><a class="anchor-no-decoration" href="#--contributor">[--contributor]</a></em> <em><a class="anchor-no-decoration" href="#--educator">[--educator]</a></em> <em><a class="anchor-no-decoration" href="#--leader">[--leader]</a></em>
           <em><a class="anchor-no-decoration" href="#--guitarist">[--guitarist]</a></em> <em><a class="anchor-no-decoration" href="#--music-lover">[--music-lover]</a></em> <em><a class="anchor-no-decoration" href="#--dog-lover">[--dog-lover]</a></em> <em><a class="anchor-no-decoration" href="#--shameless-geek">[--shameless-geek]</a></em>
 
-                   <a class="anchor-no-decoration" href="#SUMMARY"><em>[SUMMARY]</em></a>  <a class="anchor-no-decoration" href="#SKILLS"><em>[SKILLS]</em></a>  <a class="anchor-no-decoration" href="#history"><em>[HISTORY]</em></a>  <a class="anchor-no-decoration" href="#contact"><em>[CONTACT]</em></a>       </header>
+                      <em><a class="anchor-no-decoration" href="#SUMMARY">[SUMMARY]</a></em>    <em><a class="anchor-no-decoration" href="#SKILLS">[SKILLS]</a></em>    <em><a class="anchor-no-decoration" href="#history">[HISTORY]</a></em>
+</header>
 <main><em class="offset-anchor" id="SUMMARY">SUMMARY</em>
     <em>adam</em> is a full-stack developer that can be easily adapted to work with a
     variety of languages and technologies. He can be used as a powerful text
@@ -42,14 +44,14 @@ adam(1)                           User's Manual                          adam(1)
     <em class="offset-anchor" id="--developer">--developer</em>
         Adept at programming in:
 
-            * Javascript            * SQL
+            * JavaScript            * SQL
             * HTML5                 * Ruby
             * CSS3                  * Lua
 
         Attended the <a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Lighthouse Labs Web Development Bootcamp</a>, where he gained
         experience building and deploying web applications using:
 
-            * JQuery                * Express
+            * jQuery                * Express
             * React                 * MongoDB
             * Node                  * PostgreSQL
             * Rails                 * Heroku
@@ -96,17 +98,17 @@ adam(1)                           User's Manual                          adam(1)
         cases, pros, cons, and pitfalls.
 
     <em class="offset-anchor" id="--leader">--leader</em>
-        Comes pre-configured with a number of team- and project-management
-        tools. He has effectively headed teams of up to 20 workers in the
-        completion of long-term (6+ months) projects with a minimal amount of
-        dependence on supervisors.
+        Installing <em>adam</em> provides a number of team- and project-management tools.
+        As an electrician he has effectively headed teams of up to 20 workers in
+        the completion of long-term projects with a minimal amount of outside
+        assistance.
 
             * International Terminal, Calgary International Airport
             * South Health Campus, Calgary
 
     <em class="offset-anchor" id="--guitarist">--guitarist</em>, <em class="offset-anchor" id="--music-lover">--music-lover</em>
-        <em>adam</em> is lives and breathes music, covering a wide range from classical
-        to jazz to folk to death metal, though he will happily admit to being
+        <em>adam</em> lives and breathes music, covering a wide range from classical to
+        jazz to folk to death metal, though he will happily admit to being
         particularly fond of anything associated with the 1980s. He is a capable
         guitarist and amateur mixing engineer, and laments not having the living
         space in which to build his own instruments and amplifiers.
@@ -155,11 +157,12 @@ adam(1)                           User's Manual                          adam(1)
     * <em>0.1.0</em>
         - February 18, 1984
           Public alpha
-
+</main>
+<footer>
 <em id="contact">CONTACT</em>
-              * <a href="mailto://jalovatt@hotmail.com">jalovatt@hotmail.com</a>                 * <a target="_blank" href="https://github.com/jalovatt">Github</a>
-              * (403)852-8780                        * <a target="_blank" href="https://www.linkedin.com/in/adam-lovatt-864b25127/">LinkedIn</a>
+            * <a href="mailto://jalovatt@hotmail.com">jalovatt@hotmail.com</a>                   * <a target="_blank" href="https://github.com/jalovatt">Github</a>
+            * (403)852-8780                          * <a target="_blank" href="https://www.linkedin.com/in/adam-lovatt-864b25127/">LinkedIn</a>
 
                                  2018-11-20                              adam(1)
 
-</main></body></html>
+</footer></body></html>
