Update content and styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="theme-one-light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,11 @@
   <title>J. Adam Lovatt</title>
 </head>
 <body><header>
-adam(1)                          User's Manual             <em><a id="toggle" class="anchor-no-decoration" href="#">[TOGGLE COLOR SCHEME]</a></em>
+adam(1)                          User's Manual             <select id="toggle" class="toggle-dropdown">
+  <option value="one-light" selected>[THEME: ONE LIGHT]</option>
+  <option value="one-dark" >[THEME: ONE DARK]</option>
+  <option value="monokai"  >[THEME: MONOKAI]</option>
+</select>
 
 <em>NAME</em>
     J. Adam Lovatt - A junior web developer with experience in UI design and
