Refactor to use semantic elements instead of divs and preformatting

--- a/index.html
+++ b/index.html
@@ -8,165 +8,236 @@
   <script src='scripts/app.js'></script>
   <title>J. Adam Lovatt</title>
 </head>
-<body><header>
-adam(1)                          User's Manual             <select id="toggle" class="toggle-dropdown">
-  <option value="one-light" selected>[THEME: ONE LIGHT]</option>
-  <option value="one-dark" >[THEME: ONE DARK]</option>
-  <option value="monokai"  >[THEME: MONOKAI]</option>
-</select>
+<body>
 
-<em>NAME</em>
-    J. Adam Lovatt - A junior web developer with experience in UI design and
-                     project management. Proficient in JavaScript, HTML5, CSS3,
-                     and Lua.
+<header>
+  <p>
+    adam(1)
+    <span class="center-title">User's Manual</span>
+    <select id="toggle" class="toggle-dropdown align-right">
+      <option value="one-light" selected>[THEME: ONE LIGHT]</option>
+      <option value="one-dark" >[THEME: ONE DARK]</option>
+      <option value="monokai"  >[THEME: MONOKAI]</option>
+    </select>
+  </p>
 
-<em>SYNOPSIS</em>
-    <em>adam</em>  <em><a class="anchor-no-decoration" href="#--developer">[--developer]</a></em> <em><a class="anchor-no-decoration" href="#--designer">[--designer]</a></em> <em><a class="anchor-no-decoration" href="#--contributor">[--contributor]</a></em> <em><a class="anchor-no-decoration" href="#--educator">[--educator]</a></em> <em><a class="anchor-no-decoration" href="#--leader">[--leader]</a></em>
-          <em><a class="anchor-no-decoration" href="#--guitarist">[--guitarist]</a></em> <em><a class="anchor-no-decoration" href="#--music-lover">[--music-lover]</a></em> <em><a class="anchor-no-decoration" href="#--dog-lover">[--dog-lover]</a></em> <em><a class="anchor-no-decoration" href="#--shameless-geek">[--shameless-geek]</a></em>
+  <em>NAME</em>
+  <p class="indent">
+    J. Adam Lovatt - A junior web developer with experience in UI design and project management. Proficient in JavaScript, HTML5, CSS3, and Lua.
+  </p>
 
-                      <em><a class="anchor-no-decoration" href="#SUMMARY">[SUMMARY]</a></em>    <em><a class="anchor-no-decoration" href="#SKILLS">[SKILLS]</a></em>    <em><a class="anchor-no-decoration" href="#history">[HISTORY]</a></em>
+  <em>SYNOPSIS</em>
+  <p>
+    <span class="indent pre menu-name"><em>adam</em> </span>
+    <span class="menu-items">
+      <em><a class="anchor-no-decoration" href="#--developer">[--developer]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--designer">[--designer]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--contributor">[--contributor]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--educator">[--educator]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--leader">[--leader]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--guitarist">[--guitarist]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--music-lover">[--music-lover]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--dog-lover">[--dog-lover]</a> </em><wbr><em><a class="anchor-no-decoration" href="#--shameless-geek">[--shameless-geek]</a> </em>
+    </span>
+  </p>
+
+  <div class="center-headings">
+    <em><a class="anchor-no-decoration" href="#SUMMARY">[SUMMARY]</a></em>    <em><a class="anchor-no-decoration" href="#SKILLS">[SKILLS]</a></em>    <em><a class="anchor-no-decoration" href="#history">[HISTORY]</a></em>
+  </div>
 </header>
-<main><em class="offset-anchor" id="SUMMARY">SUMMARY</em>
-    <em>adam</em> is a full-stack developer that can be easily adapted to work with a
-    variety of languages and technologies. He can be used as a powerful text
-    editor, but his skills are particularly useful for designing attractive and
-    performant computer applications. <em>adam</em> has even been used to organize groups
-    of workers and improve project efficiency while reducing the amount of
-    oversight necessary.
 
-    <em>adam</em> has been designed from the ground up to be easily expanded with new
-    tools and skills.
+<div class="header-offset">&nbsp;</div>
 
-    <em>adam</em> loves making things look neat and perfect.
+<main>
+  <em class="offset-anchor" id="SUMMARY">SUMMARY</em>
+  <section class="indent">
+    <p>
+      <em>adam</em> is a full-stack developer that can be easily adapted to work with a variety of languages and technologies. He can be used as a powerful text editor, but his skills are particularly useful for designing attractive and performant computer applications. <em>adam</em> has even been used to organize groups of workers and improve project efficiency while reducing the amount of oversight necessary.
+    </p>
 
-    <em>adam</em> is eager to learn, eager to help, and eager to put his skills to use
-    making your app and your codebase stand out.
+    <p>
+      <em>adam</em> has been designed from the ground up to be easily expanded with new tools and skills.
+    </p>
 
-    In short, installing <em>adam</em> will make both him and your team better.
+    <p>
+      <em>adam</em> loves making things look neat and perfect.
+    </p>
 
-<em class="offset-anchor" id="SKILLS">SKILLS</em>
-    <em class="offset-anchor" id="--developer">--developer</em>
+    <p>
+      <em>adam</em> is eager to learn, eager to help, and eager to put his skills to use making your app and your codebase stand out.
+    </p>
+
+    <p>
+      In short, installing <em>adam</em> will make both him and your team better.
+    </p>
+  </section>
+
+  <em class="offset-anchor" id="SKILLS">SKILLS</em>
+  <section class="indent">
+    <em class="offset-anchor" id="--developer">--developer</em><br>
+    <div class="indent">
+      <p>
         Adept at programming in:
+      </p>
 
-            * JavaScript            * SQL
-            * HTML5                 * Ruby
-            * CSS3                  * Lua
+      <p class="indent pre">* JavaScript            * SQL
+* HTML5                 * Ruby
+* CSS3                  * Lua</p>
+    </div>
 
-        Attended the <a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Lighthouse Labs Web Development Bootcamp</a>, where he gained
-        experience building and deploying web applications using:
+    <div class="indent">
+      <p>
+        Attended the Lighthouse Labs&nbsp;<wbr><a target="_blank" href="https://www.lighthouselabs.ca/web-bootcamp">Web Development Bootcamp</a>, where he gained experience building and deploying web applications using:
+      </p>
 
-            * jQuery                * Express
-            * React                 * MongoDB
-            * Node                  * PostgreSQL
-            * Rails                 * Heroku
-            * Mocha/Chai            * SASS
+      <p class="indent pre">* jQuery                * Express
+* React                 * MongoDB
+* Node                  * PostgreSQL
+* Rails                 * Heroku
+* Mocha/Chai            * SASS</p>
+    </div>
 
-        Some of <em>adam</em>'s web projects include:
+    <p class="indent">
+      Some of <em>adam</em>'s web projects include:
+    </p>
 
-            * <a target="_blank" href="http://sextant-lhl.herokuapp.com/">Sextant</a>: A user-driven library of useful websites for topics
-              covered in the bootcamp, designed to fit in seamlessly with LHL's
-              Compass learning platform. <em>adam</em> was responsible for the PostgreSQL
-              database and adapting his team's markup to use the learning
-              platform's stylesheets.
+    <div class="indent">
+      <p class="indent">
+        * <a target="_blank" href="http://sextant-lhl.herokuapp.com/">Sextant</a>: A user-driven library of useful websites for topics covered in the bootcamp, designed to fit in seamlessly with LHL's Compass learning platform. <em>adam</em> was responsible for the PostgreSQL database and adapting his team's markup to use the learning platform's stylesheets.
+      </p>
 
-            * <a target="_blank" href="http://grogger.herokuapp.com/">Grogger</a>: A basic Twitter-style single page app using JQuery to
-              communicate with a back-end API.
+      <p class="indent">
+        * <a target="_blank" href="http://grogger.herokuapp.com/">Grogger</a>: A basic Twitter-style single page app using JQuery to communicate with a back-end API.
+      </p>
+    </div>
+  </section>
 
+  <section class="indent">
     <em class="offset-anchor" id="--designer">--designer</em>
-        Designed, built, and continues to maintain <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a>, a user
-        interface framework for the <a target="_blank" href="https://www.reaper.fm/">REAPER</a> digital audio workstation that gives
-        scripters an easy-to-use set of interface elements, handles drawing and
-        updates, and takes care of end-user event handling.
+    <p class="indent">
+      Designed, built, and continues to maintain <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a>, a user interface framework for the <a target="_blank" href="https://www.reaper.fm/">REAPER</a> digital audio workstation that gives scripters an easy-to-use set of interface elements, handles drawing and updates, and takes care of end-user event handling.
+    </p>
+  </section>
 
+  <section class="indent">
     <em class="offset-anchor" id="--contributor">--contributor</em>
-        <em>adam</em> has created dozens of scripts and tools for the REAPER community,
-        some of which have been used by established music, sound design, and
-        game development studios.
+    <p class="indent">
+      <em>adam</em> has created dozens of scripts and tools for the REAPER community, some of which have been used by established music, sound design, and game development studios.
+    </p>
 
-        Notable REAPER projects:
+    <p class="indent">
+      Notable REAPER projects:
+    </p>
 
-            * <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a>
+    <div class="indent">
+      <p class="indent">
+        * <a target="_blank" href="https://github.com/jalovatt/Lokasenna_GUI/wiki">Lokasenna GUI</a>
+      </p>
 
-            * <a target="_blank" href="https://forum.cockos.com/showthread.php?t=186637">Radial Menu</a>: A fast, expandable toolbar replacement offering a
-              staggering amount of customizability for different workflows.
+      <p class="indent">
+        * <a target="_blank" href="https://forum.cockos.com/showthread.php?t=186637">Radial Menu</a>: A fast, expandable toolbar replacement offering a staggering amount of customizability for different workflows.
+      </p>
 
-            * <a target="_blank" href="https://forum.cockos.com/showthread.php?t=185358">Theory Helper</a>: Suite of tools that assist users in matching
-              musical notes to a scale, generating chords, and creating
-              harmonies.
+      <p class="indent">
+        * <a target="_blank" href="https://forum.cockos.com/showthread.php?t=185358">Theory Helper</a>: Suite of tools that assist users in matching musical notes to a scale, generating chords, and creating harmonies.
+      </p>
+    </div>
 
+  </section>
+
+  <section class="indent">
     <em class="offset-anchor" id="--educator">--educator</em>
-        Some applications experience segmentation faults at the thought of
-        having to explain something, but not <em>adam</em>. He genuinely enjoys teaching
-        others what he knows, and has frequently been known to answer simple
-        questions of syntax or usage with short essays covering a variety of use
-        cases, pros, cons, and pitfalls.
+    <p class="indent">
+      Some applications experience segmentation faults at the thought of having to explain something, but not <em>adam</em>. He genuinely enjoys teaching others what he knows, and has frequently been known to answer simple questions of syntax or usage with short essays covering a variety of use cases, pros, cons, and pitfalls.
+    </p>
+  </section>
 
+  <section class="indent">
     <em class="offset-anchor" id="--leader">--leader</em>
-        Installing <em>adam</em> provides a number of team- and project-management tools.
-        As an electrician he has effectively headed teams of up to 20 workers in
-        the completion of long-term projects with a minimal amount of outside
-        assistance.
+    <p class="indent">
+      Installing <em>adam</em> provides a number of team- and project-management tools. As an electrician he has effectively headed teams of up to 20 workers in the completion of long-term projects with a minimal amount of outside assistance.
+    </p>
 
-            * International Terminal, Calgary International Airport
-            * South Health Campus, Calgary
 
-    <em class="offset-anchor" id="--guitarist">--guitarist</em>, <em class="offset-anchor" id="--music-lover">--music-lover</em>
-        <em>adam</em> lives and breathes music, covering a wide range from classical to
-        jazz to folk to death metal, though he will happily admit to being
-        particularly fond of anything associated with the 1980s. He is a capable
-        guitarist and amateur mixing engineer, and laments not having the living
-        space in which to build his own instruments and amplifiers.
+    <div class="indent">
+      <p class="indent">
+        * International Terminal, Calgary International Airport<br>
+        * South Health Campus, Calgary
+      </p>
+    </div>
+  </section>
 
+  <section class="indent">
+    <em class="offset-anchor" id="--guitarist">--guitarist</em>,<br>
+    <em class="offset-anchor" id="--music-lover">--music-lover</em>
+    <p class="indent">
+      <em>adam</em> lives and breathes music, covering a wide range from classical to jazz to folk to death metal, though he will happily admit to being particularly fond of anything associated with the 1980s. He is a capable guitarist and amateur mixing engineer, and laments not having the living space in which to build his own instruments and amplifiers.
+    </p>
+  </section>
+
+  <section class="indent">
     <em class="offset-anchor" id="--dog-lover">--dog-lover</em>
-        Comes pre-configured with one or more Boston Terriers, because Boston
-        Terriers are one of mankind's greatest achievements.
+    <p class="indent">
+      Comes pre-configured with one or more Boston Terriers, because Boston Terriers are one of mankind's greatest achievements.
+    </p>
+  </section>
 
+  <section class="indent">
     <em class="offset-anchor" id="--shameless-geek">--shameless-geek</em>
-        <em>adam</em> is a voracious consumer of science fiction, fantasy, and horror.
-        He particularly enjoys the work of Douglas Adams, H.P. Lovecraft, John
-        Carpenter, and Tim Burton, loves Star Trek, and considers The Expanse
-        to be one of the best television shows in recent years.
+    <p class="indent"><em>adam</em> is a voracious consumer of science fiction, fantasy, and horror. He particularly enjoys the work of Douglas Adams, H.P. Lovecraft, John Carpenter, and Tim Burton, loves Star Trek, and considers The Expanse to be one of the best television shows in recent years.</p>
 
-        <em>adam</em> is easily diverted for hours at a time chasing obscure
-        topics down Wikipedian rabbit holes.
+    <p class="indent">
+      <em>adam</em> is easily diverted for hours at a time chasing obscure topics down Wikipedian rabbit holes.
+    </p>
 
-        <em>adam</em> would happily pay a large sum of money in order to visit
-        a lava lake up close.
+    <p class="indent">
+      <em>adam</em> would happily pay a large sum of money in order to visit a lava lake up close.
+    </p>
+  </section>
 
-<em class="offset-anchor" id="history">HISTORY</em>
+  <em class="offset-anchor" id="history">HISTORY</em>
+  <section class="indent">
+    * <em>3.0.0</em><br>
+    <p class="indent">
+      - Lighthouse Labs Web Development Bootcamp, October 2018<br>
+      - Complete rewrite of internal codebase, revamped user interface
+    </p>
 
-    * <em>3.0.0</em>
-        - Lighthouse Labs Web Development Bootcamp, October 2018
-          Complete rewrite of internal codebase, revamped user interface
+    * <em>2.8.0</em><br>
+    <p class="indent">
+      - Techmation Electric & Controls - June 2017<br>
+      - Industrial electrician, oil and gas construction
+    </p>
 
-    * <em>2.8.0</em>
-        - Techmation Electric & Controls - June 2017
-          Industrial electrician, oil and gas construction
+    * <em>2.0.0</em><br>
+    <p class="indent">
+      - Trotter & Morton, Electrical Division - January 2010<br>
+      - Commercial electrician, institutional construction</p>
 
-    * <em>2.0.0</em>
-        - Trotter & Morton, Electrical Division - January 2010
-          Commercial electrician, institutional construction
+    * <em>1.7.0</em><br>
+    <p class="indent">
+      - Liquor Depot - October 2006<br>
+      - Store Manager
+    </p>
 
-    * <em>1.7.0</em>
-        - Liquor Depot - October 2006
-          Store Manager
+    * <em>1.3.0</em><br>
+    <p class="indent">
+      - Indigo Books & Music - January 2004
+    </p>
 
-    * <em>1.3.0</em>
-        - Indigo Books & Music - January 2004
-
-    * <em>1.0.0</em>
-        - Springbank Community High School, Calgary, AB - June 2001
-          First stable release
+    * <em>1.0.0</em><br>
+    <p class="indent">
+      - Springbank Community High School, Calgary, AB - June 2001<br>
+      - First stable release
+    </p>
 
     * <em>0.1.0</em>
-        - February 18, 1984
-          Public alpha
+    <p class="indent">
+      - February 18, 1984<br>
+      - Public alpha
+    </p>
+  </section>
 </main>
+
 <footer>
-<em id="contact">CONTACT</em>
-            * <a href="mailto://jalovatt@hotmail.com">jalovatt@hotmail.com</a>                   * <a target="_blank" href="https://github.com/jalovatt">Github</a>
-            * (403)852-8780                          * <a target="_blank" href="https://www.linkedin.com/in/adam-lovatt-864b25127/">LinkedIn</a>
+  <em id="contact">CONTACT</em>
+  <p class="center-contacts pre">* <a href="mailto://jalovatt@hotmail.com">jalovatt@hotmail.com</a>                   * <a target="_blank" href="https://github.com/jalovatt">Github</a>
+* (403)852-8780                          * <a target="_blank" href="https://www.linkedin.com/in/adam-lovatt-864b25127/">LinkedIn</a></p>
 
-                                 2018-11-20                              adam(1)
-
-</footer></body></html>
+  <span class="center-date">2018-11-20</span><span class="align-right">adam(1)</span>
+</footer>
+</body>
+</html>
