Continue refactor, add light Monokai theme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="theme-one-light">
+<html lang="en" class="theme-monokai-light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +15,10 @@
     adam(1)
     <span class="center-title">User's Manual</span>
     <select id="toggle" class="toggle-dropdown align-right">
-      <option value="one-light" selected>[THEME: ONE LIGHT]</option>
-      <option value="one-dark" >[THEME: ONE DARK]</option>
-      <option value="monokai"  >[THEME: MONOKAI]</option>
+      <option value="monokai-light" selected>[THEME: MONOKAI LIGHT]</option>
+      <option value="monokai-dark">[THEME: MONOKAI DARK]</option>
+      <option value="one-light">[THEME: ONE LIGHT]</option>
+      <option value="one-dark">[THEME: ONE DARK]</option>
     </select>
   </p>
 
