Fix header and anchor positioning

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 </header>
 
-<div class="header-offset">&nbsp;</div>
+<!-- <div class="header-offset">&nbsp;</div> -->
 
 <main>
   <em class="offset-anchor" id="SUMMARY">SUMMARY</em>
